# lvbs

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure.ac
SPECS/: kernel.spec
docs/: kvm-plane-switch-sequence.mmd  kvm-vcpus-on-vm-planes.md  kvm-vm-planes-architecture.mmd  lvbs-boot-process.md  report-2026-04-mbec-kvm-hvci.md  systemd-stub.md  virtual-machine.md  vm-planes-boot-sequence.mmd  vm-planes-modes.md
docs/how-to/: how-to-build.md
docs/reference/: lvbs-comparison-vm-planes.md  lvbs-patches.md  lvbs-summary-no-vm-planes.md  systemd-stub.md  virtual-machine.md  vm-planes-boot-sequence.mmd  vm-planes-todo-issues.md
include/: lvbs-sys.h  lvbssys.h
patches/linux/: 0000-cover-letter.patch  0001-Documentation-kvm-introduce-VM-plane-concept.patch  0002-KVM-API-definitions-for-plane-userspace-exit.patch  0003-KVM-add-plane-info-to-structs.patch  0004-KVM-introduce-struct-kvm_arch_plane.patch  0005-KVM-add-plane-support-to-KVM_SIGNAL_MSI.patch  0006-KVM-move-mem_attr_array-to-kvm_plane.patch  0007-KVM-do-not-use-online_vcpus-to-test-vCPU-validity.patch  0008-KVM-move-vcpu_array-to-struct-kvm_plane.patch  0009-KVM-implement-plane-file-descriptors-ioctl-and-creat.patch  0010-KVM-share-statistics-for-same-vCPU-id-on-different-p.patch  0011-KVM-anticipate-allocation-of-dirty-ring.patch  0012-KVM-share-dirty-ring-for-same-vCPU-id-on-different-p.patch  0013-KVM-implement-vCPU-creation-for-extra-planes.patch  0014-KVM-pass-plane-to-kvm_arch_vcpu_create.patch  0015-KVM-x86-pass-vcpu-to-kvm_pv_send_ipi.patch  0016-KVM-x86-split-if-in-__kvm_set_or_clear_apicv_inhibit.patch  0017-KVM-x86-block-creating-irqchip-if-planes-are-active.patch  0018-KVM-x86-track-APICv-inhibits-per-plane.patch  0019-KVM-x86-move-APIC-map-to-kvm_arch_plane.patch  0020-KVM-x86-add-planes-support-for-interrupt-delivery.patch  0021-KVM-x86-add-infrastructure-to-share-FPU-across-plane.patch  0022-KVM-x86-implement-initial-plane-support.patch  0023-KVM-x86-extract-kvm_post_set_cpuid.patch  0024-KVM-x86-initialize-CPUID-for-non-default-planes.patch  0025-KVM-x86-handle-interrupt-priorities-for-planes.patch  0026-KVM-x86-enable-up-to-16-planes.patch  0027-selftests-kvm-introduce-basic-test-for-VM-planes.patch  0028-selftests-kvm-add-plane-infrastructure.patch  0029-selftests-kvm-add-x86-specific-plane-test.patch  0030-Fix-merge-issue.patch  0031-Fix-compilation.patch  0032-Fix-compile-error.patch  0033-Fix-compile-errors.patch  0034-Fix-condition.patch  0035-Initial-support-for-VM-Planes.patch  0036-Use-vcpu-count-from-the-plane-configuration.patch  0037-skip-processing-plane-configuration-for-plane-0.patch  0038-Add-plane-config-param-to-specify-kernel-image-forma.patch  0039-Activate-the-VM-Planes-through-the-Hypervisor.patch  (+10 more)
patches/qemu/: 0000-cover-letter.patch  0001-Introduce-VM-Plane-support-with-KVM.patch  0002-Activate-the-planes-configuration.patch  0003-Iterate-through-each-plane-id-0-and-load-the-kernel.patch  0004-enable-hypercalls-related-to-vm-planes.patch  0005-vm_planes-fix-plane-vCPU-initialization-and-memory-m.patch  0006-Remove-comments-specific-to-CONFIG_SMP.patch  0007-vm_planes-Add-VBS-VTL-call-handling-and-plane-memory.patch  0008-vm_planes-Implement-VBS-SEAL_KERNEL-and-PROTECT_MEMO.patch  0009-vm_planes-Add-module-authentication-handlers-for-VBS.patch  0010-vm_planes-Add-kexec-validation-and-invalidation-VBS-.patch  0011-update-definition-for-KVM_CAP_VM_PLANES.patch
src/: Makefile.am
src/cli/: Makefile.am  includes.h  main.c
src/loader/: Makefile.am  pvh_shim.c
support/developer/config/: fedora-43-x86_64-kernel.cfg
support/developer/qemu/: install-prerequisites.sh
support/developer/scripts/: az-create-fedora-vm.sh  az-list-azure-nested-virt-skus.sh  az-list-fedora-images.sh  check-linux-in-vm.sh  common.sh  configure-git.sh  convert-vhd-to-qcow2.sh  convert-vhd-to-raw.sh  download-kernel-src.sh  git-repack.sh  (+6 more)
test/: create-qemu-vm.sh
test/kernel/: .gitignore  README.md  build-sk.sh  build.sh  common.sh  test-kexec-vbs.sh
test/mkosi-kvm/: .gitignore  create-ch-direct-planes.sh  create-ch-direct.sh  create-qemu-vm.sh  mkosi.conf
(+40 files in other folders)
